# ivpm-build

./: .buildinfo  PLAN.md  README.md  backend.html  cmake.html  configuration.html  genindex.html  index.html  installation.html  ivpm.yaml  migration.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: ci.yml
_modules/: index.html
_modules/ivpm_build/: backend.html  config.html
_modules/ivpm_build/cmake/: cmake_builder.html  skbuild_bridge.html
_modules/ivpm_build/setup/: build_ext.html  install_lib.html  ivpm_data.html  wrapper.html
_sources/: cmake.rst.txt  index.rst.txt  installation.rst.txt  migration.rst.txt
_sources/api/: cmake.rst.txt  config.rst.txt
api/: backend.html  cmake.html  config.html  setup.html
docs/source/: backend.rst  conf.py  configuration.rst  index.rst  migration.rst
docs/source/api/: backend.rst  setup.rst
src/ivpm_build/: __init__.py  __main__.py  __version__.py  _version.py  backend.py  config.py
src/ivpm_build/cmake/: __init__.py  cmake_builder.py  skbuild_bridge.py
src/ivpm_build/setup/: __init__.py  build_ext.py  install_lib.py  ivpm_data.py  wrapper.py
test/: conftest.py
test/integration/: test_backend.py  test_cli.py  test_setup_wrapper.py
test/unit/: test_cmake_builder.py  test_config.py  test_ivpm_data.py
tests/: test_backend_e2e.py  test_platform_tag.py
